[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/godot_better_input/src/ShortcutEdit.gd" type="Script" id=1]
[ext_resource path="res://addons/godot_better_input/assets/joy_button.svg" type="Texture" id=2]
[ext_resource path="res://addons/godot_better_input/assets/keyboard.svg" type="Texture" id=3]
[ext_resource path="res://addons/godot_better_input/assets/joy_axis.svg" type="Texture" id=4]
[ext_resource path="res://addons/godot_better_input/assets/mouse.svg" type="Texture" id=5]
[ext_resource path="res://addons/godot_better_input/src/ShortcutSelectorDialog.tscn" type="PackedScene" id=6]

[node name="ShortcutEdit" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 52.0
margin_bottom = 17.0
text = "Presets:"

[node name="PresetsOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 85.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2

[node name="ShortcutTree" type="Tree" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
hide_root = true

[node name="ShortcutTypeMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
items = [ "Key", ExtResource( 3 ), 0, false, false, 0, 0, null, "", false, "Mouse Button", ExtResource( 5 ), 0, false, false, 1, 0, null, "", false, "Joy Button", ExtResource( 2 ), 0, false, false, 2, 0, null, "", false, "Joy Axis", ExtResource( 4 ), 0, false, false, 3, 0, null, "", false ]

[node name="KeyboardShortcutSelectorDialog" parent="." instance=ExtResource( 6 )]

[node name="MouseShortcutSelectorDialog" parent="." instance=ExtResource( 6 )]
input_type = 1

[node name="JoyKeyShortcutSelectorDialog" parent="." instance=ExtResource( 6 )]
input_type = 2

[node name="JoyAxisShortcutSelectorDialog" parent="." instance=ExtResource( 6 )]
input_type = 3

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/PresetsOptionButton" to="." method="_on_PresetsOptionButton_item_selected"]
[connection signal="button_pressed" from="VBoxContainer/ShortcutTree" to="." method="_on_ShortcutTree_button_pressed"]
[connection signal="item_activated" from="VBoxContainer/ShortcutTree" to="." method="_on_ShortcutTree_item_activated"]
[connection signal="id_pressed" from="ShortcutTypeMenu" to="." method="_on_ShortcutTypeMenu_id_pressed"]
